pictureText alignment fix info @laurin finished picture with picture

--- a/src/es/components/molecules/teaser/overlay-/overlay-.css
+++ b/src/es/components/molecules/teaser/overlay-/overlay-.css
@@ -30,7 +30,7 @@
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
 }
-:host figure a-picture, :host figure figcaption {
+:host figure a-picture, :host figure m-picture-with-picture, :host figure figcaption {
   grid-column: 1;
   grid-row: 1;
 }
